deployment/k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-public
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: api-gateway
