deployment/k8s/api-gateway/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 11m
spec:
  tls:
    - hosts:
      - asafsibony.com
      secretName: cert-asafsibony.com
  rules:
  - host: asafsibony.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api-gateway-public
          servicePort: 80
